# earth-observatory-homepage

./: .gitignore  README.md  README.rst  index.html  manifest.json  pyproject.toml  style.css  update_visible_earth.php  ve_functions.php  visible_earth.py
.github/workflows/: release.yml
js/: index.js  main.js
systemd/: visible-earth-scrap.service  visible-earth-scrap.timer  visible-earth-server.service  visible-earth.service
