[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'
[tool.setuptools.packages.find]
where = ["src"]

[project]
version = '0.1.0'

name = 'visible_earth'
authors = [
    {name='Clément Haëck', email='clement.haeck@posteo.net'},
]
maintainers = [
    {name='Clément Haëck', email='clement.haeck@posteo.net'}
]
description = 'Homepage with latest VisibleEarth images'

readme = 'README.md'
classifiers = [
    'Programming Language :: Python :: 3',
]

license = 'MIT'
# license-files = ['LICENSE*']

requires-python = '>=3.11'
dependencies = [
    'bs4',
    'lxml'
]

[project.optional-dependencies]
dev = [
    'ruff',
    'mypy',
    'pytest',
]

[project.urls]
'Source' = 'https://github.com/Descanonge/visible-earth-home'

[tool.mypy]
disable_error_code = ['annotation-unchecked']
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = 'py311'

[tool.ruff.lint]
select = [
       'E',  # pycodestyle
       'W',  # pycodestyle
       'I',  # isort
       'N',  # pep8-name
       'B',  # bugbear
       'G',  # flake8-logging-format
       'F',  # pyflakes
       'UP',  #pyupgrade
       'D',  #pydocstyle
       'PL', #pylint
]

ignore = [
       'E226', # missing whitespace around arithmetic operator
       'D105', # missing docstring for magical method
       'D204', # one blank line after class
       'D213', # multiline docstring start at 2nd line
       'D417', # not all parameters need doc
]
unfixable = ["F401"]

[too.ruff.lint.pycodestyle]
max-line-length = 90

[tool.ruff.lint.pydocstyle]
convention = 'numpy'

[tool.ruff.format]
quote-style = 'double'
